<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_mensaje"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="14dp"
        android:textSize="24sp"
        android:visibility="gone"
         />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSimpleWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/bt_simple_work"
        android:layout_marginTop="64dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_stop_simple_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:text="@string/bt_stop_simple_work"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCoroutineWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSimpleWork"
        android:text="@string/bt_coroutine_work"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btStopCoroutineWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSimpleWork"
        android:text="@string/bt_stop_coroutine_work"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCoroutineWorkHandler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCoroutineWork"
        android:text="@string/bt_handler_work"
        android:layout_marginTop="16dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btStopWorkHandler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCoroutineWork"
        android:text="@string/bt_stop_handler_work"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLongCoroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCoroutineWorkHandler"
        android:text="@string/bt_long_coroutine_work"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btStopLongCoroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCoroutineWorkHandler"
        android:text="@string/bt_stop_long_coroutine_work"
        android:layout_marginTop="16dp"
        />

    <com.vila.workmanager.MyCustomButtom
        android:id="@+id/btCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btStopLongCoroutine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="custom Buttom"
        />

    <com.vila.workmanager.MyCustomButtom
        android:id="@+id/btCustomExtension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btCustom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="custom Buttom with extension"
        />

    <com.vila.workmanager.MyCustomButtom
        android:id="@+id/btNextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btCustomExtension"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="go to next Activity"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDoubleClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btNextActivity"
        android:text="Click Here"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>